<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcontactus2"
    tools:context=".contaactus2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:text="@string/contact"
            android:textColor="#fff"
            android:textSize="41sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:text="@string/contactus2des"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:padding="10dp"
            android:background="@drawable/bginput"
            android:layout_marginTop="30dp"
            android:layout_width="288dp"
            android:layout_height="50dp"
            android:textColorHint="#87ffffff"
            android:hint="@string/email"
            />

        <EditText
            android:id="@+id/subject"
            android:padding="10dp"
            android:background="@drawable/bginput"
            android:layout_marginTop="30dp"
            android:layout_width="288dp"
            android:layout_height="50dp"
            android:textColorHint="#87ffffff"
            android:hint="@string/subject"
            />

        <EditText
            android:id="@+id/message"
            android:padding="10dp"
            android:background="@drawable/bginput"
            android:layout_marginTop="30dp"
            android:layout_width="288dp"
            android:layout_height="80dp"
            android:textColorHint="#87ffffff"
            android:hint="@string/message"
            />

        <Button
            android:layout_width="168dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bgbtn"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"
            android:id="@+id/send"
            />

    </LinearLayout>



    //floating action menu start
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:fab_addButtonColorNormal="@color/white"
            app:fab_addButtonColorPressed="@color/pink_pressed"
            app:fab_addButtonPlusIconColor="#0092CE"
            app:fab_labelStyle="@style/custom_Fab">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_home_black_24dp"
                android:id="@+id/fab_actionhome"
/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_list_black_24dp"
                android:id="@+id/fab_actiondepartment"
                />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_search_black_24dp"
                android:id="@+id/fab_actionsearch" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_local_library_black_24dp"
                android:id="@+id/fab_actionqoutes"
/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_call_black_24dp"
                android:id="@+id/fab_actioncontact"
/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="#0092CE"
                app:fab_colorPressed="@color/white_pressed"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_priority_high_black_24dp"
                android:id="@+id/fab_actionabout"
/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>
    //floating action menu end


</androidx.constraintlayout.widget.ConstraintLayout>