<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#d6dbdf"
    tools:context=".search">

    <LinearLayout
        android:id="@+id/texthome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:foregroundGravity="center"
        android:id="@+id/viewPager"
        android:layout_centerInParent="true"
        android:overScrollMode="never"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/see"
        android:text="@string/see"
        android:textColor="#fff"
        android:background="@drawable/round"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    //floating action menu start
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:fab_addButtonColorNormal="#0092CE"
        app:fab_addButtonColorPressed="@color/pink_pressed"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_labelStyle="@style/custom_Fab">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_home_black_24dp"
            android:id="@+id/fab_actionhome"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_list_black_24dp"
            android:id="@+id/fab_actiondepartment"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_search_black_24dp"
            android:id="@+id/fab_actionsearch" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_local_library_black_24dp"
            android:id="@+id/fab_actionqoutes"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_call_black_24dp"
            android:id="@+id/fab_actioncontact"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#0092CE"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_priority_high_black_24dp"
            android:id="@+id/fab_actionabout"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginTop="180dp"
        android:queryHint="@string/searchhere"
        android:iconifiedByDefault="false"
        android:id="@+id/searchView"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:id="@+id/myList"
        />

    //floating action menu end
    <ImageView
        android:id="@+id/bgapp"
        android:scaleType="fitXY"
        android:src="@drawable/bgapp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</RelativeLayout>